# SeniorProject

./: CMakeLists.txt  README.md  bug_moving_to_indigo.txt
robot_odometry/: CMakeLists.txt  CMakeLists.txt~  outodom.txt  package.xml  package.xml~
robot_odometry/include/: Movingavg.h
robot_odometry/scripts/: trajectoryplotter_node.py
robot_odometry/src/: Movingavg.cpp  circular_odo_publisher.cpp  imu_orientation_node.cpp  robot_odometry_node.cpp  sandbox_node.cpp  vectornav_driver_node.cpp
robot_odometry/srv/: BiasImu.srv  BiasImu.srv~  Uichangeaxis.srv  Uisetstartpoint.srv  Uisetstartpoint.srv~
visual_odometry/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
visual_odometry/OLDVERSION_NOCOV/: VisualOdometry.cpp  VisualOdometry.h
visual_odometry/include/: VisualOdometry.h
visual_odometry/launch/: open_webcam.launch  visual_odometry.launch
visual_odometry/msg/: DistanceCovStamped.msg
visual_odometry/scripts/: video_publisher_node.py  video_publisher_node.py~
visual_odometry/src/: VisualOdometry.cpp  camera_config_node.cpp  visual_odometry_node.cpp
